# nanobit

./: CHANGELOG.md  Cargo.toml  README.md
examples/: basic_usage.rs
src/: buffer.rs  compression.rs  de.rs  error.rs  lib.rs  ser.rs
