[package]
name = "nanobit"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <code@jamesgober.dev>"
]

description = "Ultra-fast binary serialization with multi-format compression and zero-copy deserialization"
keywords = [
    "serialization", 
    "binary", 
    "compression", 
    "zero-copy", 
    "performance"
]
categories = [
    "encoding",
    "data-structures",
    "compression",
    "no-std",
    "database"
]
documentation = "https://docs.rs/nanobit"
repository = "https://github.com/jamesgober/nanobit"
homepage = "https://github.com/jamesgober/nanobit"



[features]
default = ["std", "serde", "compression", "multi-compression"]
std = []
async = ["tokio", "futures-core", "futures-util"]
compression = ["lz4_flex"]
multi-compression = ["zstd", "snap"]
serde_compat = ["serde"]



[dependencies]
# Core async runtime support
tokio = { version = "1.0", features = ["rt", "io-util"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

# Optional compression support
lz4_flex = { version = "0.11", optional = true }

# Optional serde compatibility
serde = { version = "1.0", features = ["derive"], optional = true }

# Compression algorithms
zstd = { version = "0.13", optional = true }
snap = { version = "1.1", optional = true }


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
snap = "1.1"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
